python/versioned_docs/version-1.13.0/api/class-response.mdx
---
id: class-response
title: "Response"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[Response] class represents responses which are received by page.


- [response.body()](./api/class-response.mdx#response-body)
- [response.finished()](./api/class-response.mdx#response-finished)
- [response.frame](./api/class-response.mdx#response-frame)
- [response.headers](./api/class-response.mdx#response-headers)
- [response.json()](./api/class-response.mdx#response-json)
- [response.ok](./api/class-response.mdx#response-ok)
- [response.request](./api/class-response.mdx#response-request)
- [response.security_details()](./api/class-response.mdx#response-security-details)
- [response.server_addr()](./api/class-response.mdx#response-server-addr)
- [response.status](./api/class-response.mdx#response-status)
- [response.status_text](./api/class-response.mdx#response-status-text)
- [response.text()](./api/class-response.mdx#response-text)
- [response.url](./api/class-response.mdx#response-url)

## response.body() {#response-body}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-body-return"/> &#60;[bytes]&#62;<a href="#response-body-return" class="list-anchor">#</a>

Returns the buffer with response body.

## response.finished() {#response-finished}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-finished-return"/> &#60;[NoneType]|[str]&#62;<a href="#response-finished-return" class="list-anchor">#</a>

Waits for this response to finish, returns failure error if request failed.

## response.frame {#response-frame}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-frame-return"/> &#60;[Frame]&#62;<a href="#response-frame-return" class="list-anchor">#</a>

Returns the [Frame] that initiated this response.

## response.headers {#response-headers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-headers-return"/> &#60;[Dict]\[[str], [str]\]&#62;<a href="#response-headers-return" class="list-anchor">#</a>

Returns the object with HTTP headers associated with the response. All header names are lower-case.

## response.json() {#response-json}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-json-return"/> &#60;[Serializable]&#62;<a href="#response-json-return" class="list-anchor">#</a>

Returns the JSON representation of response body.

This method will throw if the response body is not parsable via `JSON.parse`.

## response.ok {#response-ok}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-ok-return"/> &#60;[bool]&#62;<a href="#response-ok-return" class="list-anchor">#</a>

Contains a boolean stating whether the response was successful (status in the range 200-299) or not.

## response.request {#response-request}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-request-return"/> &#60;[Request]&#62;<a href="#response-request-return" class="list-anchor">#</a>

Returns the matching [Request] object.

## response.security_details() {#response-security-details}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-security-details-return"/> &#60;[NoneType]|[Dict]&#62;<a href="#response-security-details-return" class="list-anchor">#</a>
  - `issuer` &#60;[str]&#62; Common Name component of the Issuer field. from the certificate. This should only be used for informational purposes. Optional.
  - `protocol` &#60;[str]&#62; The specific TLS protocol used. (e.g. `TLS 1.3`). Optional.
  - `subjectName` &#60;[str]&#62; Common Name component of the Subject field from the certificate. This should only be used for informational purposes. Optional.
  - `validFrom` &#60;[float]&#62; Unix timestamp (in seconds) specifying when this cert becomes valid. Optional.
  - `validTo` &#60;[float]&#62; Unix timestamp (in seconds) specifying when this cert becomes invalid. Optional.

Returns SSL and other security information.

## response.server_addr() {#response-server-addr}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-server-addr-return"/> &#60;[NoneType]|[Dict]&#62;<a href="#response-server-addr-return" class="list-anchor">#</a>
  - `ipAddress` &#60;[str]&#62; IPv4 or IPV6 address of the server.
  - `port` &#60;[int]&#62;

Returns the IP address and port of the server.

## response.status {#response-status}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-status-return"/> &#60;[int]&#62;<a href="#response-status-return" class="list-anchor">#</a>

Contains the status code of the response (e.g., 200 for a success).

## response.status_text {#response-status-text}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-status-text-return"/> &#60;[str]&#62;<a href="#response-status-text-return" class="list-anchor">#</a>

Contains the status text of the response (e.g. usually an "OK" for a success).

## response.text() {#response-text}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-text-return"/> &#60;[str]&#62;<a href="#response-text-return" class="list-anchor">#</a>

Returns the text representation of response body.

## response.url {#response-url}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="response-url-return"/> &#60;[str]&#62;<a href="#response-url-return" class="list-anchor">#</a>

Contains the URL of the response.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"